<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuVisiteurActivity"
    android:background="@drawable/bg">

    <Button
        android:id="@+id/btListe_Mission"
        android:layout_width="135dp"
        android:layout_height="62dp"
        android:layout_marginStart="44dp"
        android:text="@string/Liste_Mission"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/btAjoute_frais"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:text="@string/Ajoute_frais"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toEndOf="@+id/btListe_Mission"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.317" />

    <Button
        android:id="@+id/btListe_frais"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:text="@string/Liste_frais"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btListe_Mission"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/btDeco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btDeco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

</androidx.constraintlayout.widget.ConstraintLayout>